# reader-pattern-servant-app

./: .gitignore  CHANGELOG.md  Makefile  README.md  package.yaml  reader-proto.cabal
app/: Config.hs  Main.hs
app/App/DI/: Db.hs  Log.hs
app/DI/: Db.hs  Log.hs  Time.hs
apps/mocking-server/: Main.hs
libs/api/: ReaderProtoApi.hs
libs/api/ReaderProtoApi/: Model.hs
libs/base/ReaderProtoBase/: Prelude.hs
libs/logger/: ReaderProtoLogger.hs
libs/mock-db/: ReaderProtoMockDb.hs
libs/service/: ReaderProtoService.hs
libs/service/ReaderProtoService/: Service.hs
src/: Api.hs  App.hs  Server.hs  Types.hs
src/DI/: Log.hs  Setup.hs  Time.hs
src/Server/: Class.hs  Env.hs  GetById.hs  GetByTag.hs  GetMessage.hs  ListTag.hs  Save.hs  ToggleLog.hs
