cabal-version:      3.0
name:               reader-proto
version:            0
extra-source-files: README.md

common base-settings
  default-language:   Haskell2010
  default-extensions:
    NoImplicitPrelude
    BangPatterns
    BinaryLiterals
    ConstraintKinds
    DataKinds
    DefaultSignatures
    DeriveDataTypeable
    DeriveFoldable
    DeriveFunctor
    DeriveGeneric
    DeriveTraversable
    DerivingVia
    DoAndIfThenElse
    DuplicateRecordFields
    EmptyDataDecls
    ExistentialQuantification
    FlexibleContexts
    FlexibleInstances
    FunctionalDependencies
    GADTs
    GeneralizedNewtypeDeriving
    ImportQualifiedPost
    InstanceSigs
    KindSignatures
    LambdaCase
    MultiParamTypeClasses
    MultiWayIf
    NamedFieldPuns
    OverloadedStrings
    PackageImports
    PartialTypeSignatures
    PatternGuards
    PolyKinds
    RankNTypes
    RecordWildCards
    ScopedTypeVariables
    StandaloneDeriving
    TupleSections
    TypeApplications
    TypeFamilies
    TypeOperators
    TypeSynonymInstances
    ViewPatterns
    NoFieldSelectors
    OverloadedRecordDot

common executable-settings
  import:      base-settings
  ghc-options: -O2 -threaded -rtsopts "-with-rtsopts=-N -I0 -qg"

library reader-proto-base
  import:          base-settings
  hs-source-dirs:  libs/base
  exposed-modules: ReaderProtoBase.Prelude
  build-depends:
    , base
    , bytestring
    , containers
    , mtl
    , stm
    , text
    , time
    , transformers

library reader-proto-api
  import:          base-settings
  hs-source-dirs:  libs/api
  exposed-modules:
    ReaderProtoApi
    ReaderProtoApi.Model

  build-depends:
    , aeson
    , base
    , bytestring
    , containers
    , deriving-aeson
    , reader-proto-base
    , servant
    , servant-server
    , stm
    , text
    , time
    , transformers
    , warp

library reader-proto-service
  import:          base-settings
  hs-source-dirs:  libs/service
  exposed-modules: ReaderProtoService
  other-modules:   ReaderProtoService.Service
  build-depends:
    , base
    , bytestring
    , containers
    , reader-proto-api
    , reader-proto-base
    , reader-proto-logger
    , stm
    , text
    , time
    , transformers

library reader-proto-logger
  import:          base-settings
  hs-source-dirs:  libs/logger
  exposed-modules: ReaderProtoLogger
  build-depends:
    , base
    , bytestring
    , containers
    , reader-proto-base
    , stm
    , text
    , time
    , transformers

-- Specific database. Completely decoupled.
-- Knows nothing about our service logic or routing.
library reader-proto-mock-db
  import:          base-settings
  hs-source-dirs:  libs/mock-db
  exposed-modules: ReaderProtoMockDb
  build-depends:
    , base
    , containers
    , reader-proto-base
    , text
    , transformers

executable reader-proto-mocking-server
  import:         executable-settings
  hs-source-dirs: apps/mocking-server
  main-is:        Main.hs
  build-depends:
    , reader-proto-base
    , reader-proto-mock-db
    , reader-proto-service
